apart logic from controller
